added iris dataser

--- a/polynomial_regression.ipynb
+++ b/polynomial_regression.ipynb
@@ -15,7 +15,7 @@
     "id": "CECBSUlSfYSt"
    },
    "source": [
-    "####Predicting previus salary of a potential employee"
+    "#### Predicting previus salary of a potential employee"
    ]
   },
   {
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../Datasets/Position_Salaries.csv')\n",
+    "dataset = pd.read_csv('Datasets/Position_Salaries.csv')\n",
     "X = dataset.iloc[:, 1:-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
