--- a/decision_tree_regression.ipynb
+++ b/decision_tree_regression.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "id": "y98nA5UdU6Hf"
    },
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "id": "pLVaXoYVU_Uy"
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../Datasets/Position_Salaries.csv')\n",
+    "dataset = pd.read_csv('Datasets/Position_Salaries.csv')\n",
     "X = dataset.iloc[:, 1:-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -90,7 +90,7 @@
        "DecisionTreeRegressor(random_state=0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
        "array([150000.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
