--- a/support_vector_regression.ipynb
+++ b/support_vector_regression.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../Datasets/Position_Salaries.csv')\n",
+    "dataset = pd.read_csv('Datasets/Position_Salaries.csv')\n",
     "X = dataset.iloc[:, 1:-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
